--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -5,11 +5,10 @@ body:
 - type: markdown
   attributes:
     value: |
-      Thank you for taking the time to submit a bug report. Support on
-      our open-source software is provided on a best-effort basis, but
-      we'll do our best to review your bug report and provide a fix as
-      necessary.
-      
+      Thank you for taking the time to submit a bug report. Support on our open-source software is provided on a best-effort basis, but we'll do our best to review your bug report and provide a fix as necessary. 
+- type: checkboxes
+  attributes:
+    label: |
       # IMPORTANT NOTE
       This is a public system; anyone on the internet can read the information 
       you provide in this form. As such, please take extra care *not* to include 
@@ -20,9 +19,10 @@ body:
       - Private URLs that expose the host names of your Fortify or other products
       - Credentials like usernames, passwords or tokens
 
-      Such information is commonly exposed in screen shots, log files, or example command
-      invocations. Although we do prefer full logs and screenshots, please make sure to 
-      redact any such confidential or PII data before posting.
+      Such information is commonly exposed in screen shots, log files, or example command invocations. Although we do prefer full logs and screenshots, please make sure to redact any such confidential or PII data before posting.
+    options:
+    - label: I have understood this warning and will refrain from posting any confidential data.
+      required: true
 - type: textarea
   attributes:
     label: Current Behavior
