--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -5,11 +5,14 @@ body:
 - type: markdown
   attributes:
     value: |
-      Thank you for taking the time to submit a bug report. Support on our open-source software is provided on a best-effort basis, but we'll do our best to review your bug report and provide a fix as necessary. 
-- type: checkboxes
-  attributes:
-    label: IMPORTANT NOTE
-    description: |
+      Thank you for taking the time to submit a bug report. Support on most of our open-source software is provided on a best-effort basis, but we'll do our best to review your bug report and provide a fix as necessary. Please review repository documentation for more details on support status.
+      
+      # FORMATTING
+      
+      All fields on this form accept Markdown-formatted text. Please make sure to use proper Markdown formatting, like using proper literal text/code blocks for sample commands, stack traces, etcetera. After posting, please review your issue for any incorrect formatting and edit accordingly if necessary.
+      
+      # CONFIDENTIALITY WARNING
+      
       This is a public system; anyone on the internet can read the information you provide in this form. As such, please take extra care *not* to include any confidential data, which may include:
 
       - Personal Identifiable Information (PII) like names, email addresses, phone numbers, ...
@@ -18,13 +21,10 @@ body:
       - Credentials like usernames, passwords or tokens
 
       Such information is commonly exposed in screen shots, log files, or example command invocations. Although we do prefer full logs and screenshots, please make sure to redact any such confidential or PII data before posting.
-    options:
-    - label: I have understood this warning and will refrain from posting any confidential data.
-      required: true
 - type: textarea
   attributes:
     label: Current Behavior
-    description: A concise description of what you're experiencing.
+    description: A concise description of what you're experiencing.    
   validations:
     required: false
 - type: textarea
@@ -50,12 +50,10 @@ body:
     description: |
       examples:
         - **OS**: Ubuntu 20.04
-        - **Node**: 13.14.0
-        - **npm**: 7.6.3
-    value: |
-        - OS:
-        - Node:
-        - npm:
+        - **SSC**: 24.2.0
+        - **fcli**: 2.4.0
+    placeholder: |
+        Describe the environment in which you're experiencing the issue, like Operating System, product versions, ...
     render: markdown
   validations:
     required: false
@@ -65,6 +63,6 @@ body:
     description: |
       Links? References? Anything that will give us more context about the issue you are encountering!
 
-      Tip: You can attach images or log files by clicking this area to highlight it and then dragging files in.
+      Tip: You can attach images or log files by clicking this area to highlight it and then dragging files in. Please ensure that screenshots or log files don't contain any confidential data.
   validations:
     required: false
