--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -5,13 +5,15 @@ body:
 - type: markdown
   attributes:
     value: |
+      ## INTRODUCTION
+    
       Thank you for taking the time to submit a bug report. Support on most of our open-source software is provided on a best-effort basis, but we'll do our best to review your bug report and provide a fix as necessary. Please review repository documentation for more details on support status.
       
-      # FORMATTING
+      ### FORMATTING
       
       All fields on this form accept Markdown-formatted text. Please make sure to use proper Markdown formatting, like using proper literal text/code blocks for sample commands, stack traces, etcetera. After posting, please review your issue for any incorrect formatting and edit accordingly if necessary.
       
-      # CONFIDENTIALITY WARNING
+      ### CONFIDENTIALITY WARNING
       
       This is a public system; anyone on the internet can read the information you provide in this form. As such, please take extra care *not* to include any confidential data, which may include:
 
