--- a/.github/ISSUE_TEMPLATE/enhancement-request.yaml
+++ b/.github/ISSUE_TEMPLATE/enhancement-request.yaml
@@ -7,11 +7,11 @@ body:
     value: |
       ## INTRODUCTION
     
-      Thank you for taking the time to submit an enhancement request. Support on most of our open-source software is provided on a best-effort basis, but we'll do our best to review your enhancement request. Please review repository documentation for more details on support status.
+      Thank you for taking the time to submit an enhancement request. We'll try to promptly review your request, but please note that support on most of our open-source software is provided on a best-effort basis. Please review repository documentation for more details on support status.
       
       ### POSTING INSTRUCTIONS
       
-      Before posting, please search the list of existing issues (including closed issues) to see whether a similar enhancement request already exists. If so, please comment on the existing enhancement request if necessary, rather than posting a duplicate enhancement request.
+      Before posting, please search the list of existing issues (including closed issues) to see whether a similar enhancement request already exists. If so, please comment on the existing enhancement request if necessary, rather than posting a new one.
       
       If applicable, please assign the appropriate labels to this enhancement request from the `Labels` section on the right-hand side of this form. 
       
@@ -26,7 +26,7 @@ body:
       - Private URLs that expose the host names of your Fortify or other products
       - Credentials like usernames, passwords or tokens
 
-      Such information is commonly exposed in screen shots, log files, or example command invocations. Although we do prefer full logs and screenshots, please make sure to redact any such confidential or PII data before posting.
+      Such information is often inadvertently exposed in screen shots, log files, or example command invocations. Although we do prefer full logs and screenshots, please make sure to redact any such confidential or PII data before posting.
 - type: textarea
   attributes:
     label: Enhancement Request
