--- a/.github/ISSUE_TEMPLATE/question.yaml
+++ b/.github/ISSUE_TEMPLATE/question.yaml
@@ -7,11 +7,11 @@ body:
     value: |
       ## INTRODUCTION
     
-      Thank you for taking the time to raise a question. Support on most of our open-source software is provided on a best-effort basis, but we'll do our best to review and answer your question. Please review repository documentation for more details on support status.
+      Thank you for taking the time to raise a question. We'll try to promptly review your question, but please note that support on most of our open-source software is provided on a best-effort basis. Please review repository documentation for more details on support status.
       
       ### POSTING INSTRUCTIONS
       
-      Before posting, please search the list of existing issues (including closed issues) to see whether a similar question already exists. If so, please comment on the existing question if necessary, rather than posting a duplicate question.
+      Before posting, please search the list of existing issues (including closed issues) to see whether a similar question already exists. If so, please comment on the existing question if necessary, rather than posting a new one.
       
       If applicable, please assign the appropriate labels to this question from the `Labels` section on the right-hand side of this form. 
       
